update on the UI Responsiveness

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accessment Exercise</title>
   </head>
-  <body style="margin: 0px; padding: 0px">
+  <body 
+  style="margin: 0px; 
+        padding: 0px;
+        font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;!important "
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
